added hovers and moving header

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	</head>
 	
 	<body>
-		<header>
+		<header class="sticky">
 			<nav>
 			<div class="header-text">
 					<ul>
-						<li><a href="#top" style="text-decoration: none;">Home</a></li>
-						<li><a href="#about_me" style="text-decoration: none;">About me</a></li>
-						<li><a href="#my_portfolio" style="text-decoration: none;">My Portfolio</a></li>
-						<li><a href="#contact_me" style="text-decoration: none;">Contact Me</a></li>
+						<li class="top-link"><a href="#top" style="text-decoration: none;">Home</a></li>
+						<li class="top-link"><a href="#about_me" style="text-decoration: none;">About me</a></li>
+						<li class="top-link"><a href="#my_portfolio" style="text-decoration: none;">My Portfolio</a></li>
+						<li class="top-link"><a href="#contact_me" style="text-decoration: none;">Contact Me</a></li>
 					</ul>
 			</div>
 			</nav>
@@ -47,13 +47,13 @@
 			<h1 id="my_portfolio">My Portfolio</h1>
 			<ul>
 				<li><a href = "https://github.com/kubczakn/Artist-Track-Bot" style = "text-decoration:none", target="blank;">
-					<img src="https://developer.spotify.com/assets/branding-guidelines/icon3@2x.png"></a>
+					<img  class="logo" src="https://developer.spotify.com/assets/branding-guidelines/icon3@2x.png"></a>
 					<h3>Spotify Bot</h3>
 					<p>Python script that creates and customizes Spotify playlists.</p>
 				</li>
 				
 				<li><a href = "https://github.com/kubczakn/Tic-Tac" style = "text-decoration:none", target="blank;">
-					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS3Szlk5X2V
+					<img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS3Szlk5X2V
 					qcdJ7f4musEzRylElhDCJ6sAtr3QoBbvAIVHAj1y&usqp=CAU"></a>
 					<h3>Tic-Tac-Toe</h3>
 					<p>Simple Tic-Tac-Toe game written in C++.</p>
@@ -65,14 +65,14 @@
 		<div class="contact">
 			<h1 id="contact_me">Contact Me!</h1>
 			<ul>
-				<div class="icons">
-					<li><a href = "mailto:nathankubczak@gmail.com", target="blank">
+				<div>
+					<li class="icons"><a href = "mailto:nathankubczak@gmail.com", target="blank">
 						<i class="fa fa-envelope-square"> </i>
 					</a></li>
-					<li><a href = "https://www.linkedin.com/in/nathan-kubczak-084596193/", target="blank">
+					<li class="icons"><a href = "https://www.linkedin.com/in/nathan-kubczak-084596193/", target="blank">
 						<i class="fa fa-linkedin-square"> </i>
 					</a></li>
-					<li><a href = "https://github.com/kubczakn", target="blank">
+					<li class="icons"><a href = "https://github.com/kubczakn", target="blank">
 						<i class="fa fa-github-square"> </i>
 					</a></li>
 				</div>
