added java calculator project

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
 					<h3>Tic-Tac-Toe</h3>
 					<p>Simple Tic-Tac-Toe game written in C++.</p>
 				</li>
+				<li><a href = "https://github.com/kubczakn/Calculator" style = "text-decoration:none", target="blank;">
+					<img class="logo" src="https://is4-ssl.mzstatic.com/image/thumb/Purple123/v4/56/39/a0/5639a04b-
+					3f9b-b7d0-87a2-61b497b31ed4/pr_source.png/320x0w.png"></a>
+					<h3>Java Calculator</h3>
+					<p>Four function calculator written in Java.</p>
+				</li>
 				
 			</ul>
 		</div>
