added mars weather

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 
 		<div class="about">
 			<img style="max-width:200px; height:auto; float:left;" 
-			src="https://www.bing.com/images/blob?bcid=S
-			NceHqUGyUwBrIyg-ORRe.qCUY1s.....2E">
+			src="https://www.bing.com/images/blob?bcid=SNceHqUGyWQBSw">
 			<p>
 			Hi! My name is Nathan Kubczak and I'm a student at the Univeristy of
 			Michigan studying Computer Science. Currently, I'm proficient in C++, Python,
@@ -46,6 +45,12 @@
 		<div class="portfolio">
 			<h1 id="my_portfolio">My Portfolio</h1>
 			<ul>
+				<li><a href = "https://github.com/kubczakn/Mars-Weather" style = "text-decoration:none", target="blank;">
+					<img  class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/OSIRIS_Mars_true_color.jpg/220px-OSIRIS_Mars_true_color.jpg"></a>
+					<h3>Mars Weather</h3>
+					<p>App that allows user to obtain basic weather data from Mars.</p>
+				</li>
+				
 				<li><a href = "https://github.com/kubczakn/Artist-Track-Bot" style = "text-decoration:none", target="blank;">
 					<img  class="logo" src="https://developer.spotify.com/assets/branding-guidelines/icon3@2x.png"></a>
 					<h3>Spotify Bot</h3>
