--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 		<div class="about">
 			<img style="max-width:200px; height:auto; float:left;" 
-			src="images/headshot.jpg">
+			src="https://www.bing.com/images/blob?bcid=SOaazCcy8o4ByQ">
 			<p>
 			Hi! My name is Nathan Kubczak and I'm a student at the Univeristy of
 			Michigan studying Computer Science. Currently, I'm proficient in C++, Python,
