--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			src="https://i.ibb.co/ygpBm9Z/Portfolio-Headshot.png" >
 			<p>
 			Hi! My name is Nathan Kubczak and I'm a student at the Univeristy of
-			Michigan studying Computer Science. Currently, I'm proficient in C++, Python,
+			Michigan studying Computer Science. Currently, I'm proficient in C++, Python, Java, SQL
 			and HTML/CSS. Please take a look at my portfolio for a glance at projects I've 
 			completed and am working on. When I'm not sitting in front of my laptop, I love
 			hiking, reading, and drinking coffee!
@@ -63,13 +63,22 @@
 					<h3>Tic-Tac-Toe</h3>
 					<p>Simple Tic-Tac-Toe game written in C++.</p>
 				</li>
-				<li><a href = "https://github.com/kubczakn/Calculator" style = "text-decoration:none", target="blank;">
+				<li><a href = "https://github.com/kubczakn/Quotes" style = "text-decoration:none", target="blank;">
 					<img class="logo" src="https://is4-ssl.mzstatic.com/image/thumb/Purple123/v4/56/39/a0/5639a04b-
 					3f9b-b7d0-87a2-61b497b31ed4/pr_source.png/320x0w.png"></a>
 					<h3>Java Calculator</h3>
 					<p>Four function calculator written in Java.</p>
 				</li>
-				
+				<li><a href = "https://github.com/kubczakn/Calculator" style = "text-decoration:none", target="blank;">
+					<img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/7/74/Basho_Horohoroto.jpg"></a>
+					<h3>Haiku Generator</h3>
+					<p>Django application that generates random haikus and categorizes them by sentiment.</p>
+				</li>
+				<li><a href = "https://github.com/kubczakn/Calculator" style = "text-decoration:none", target="blank;">
+					<img class="logo" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__340.jpg"></a>
+					<h3>Wallpaper Scraper</h3>
+					<p>Python script that sets home wallpaper from web scraping.</p>
+				</li>
 			</ul>
 		</div>
 		
