--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 					<h3>Java Calculator</h3>
 					<p>Four function calculator written in Java.</p>
 				</li>
-				<li><a href = "https://github.com/kubczakn/Calculator" style = "text-decoration:none", target="blank;">
+				<li><a href = "https://github.com/kubczakn/Quotes" style = "text-decoration:none", target="blank;">
 					<img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/7/74/Basho_Horohoroto.jpg"></a>
 					<h3>Haiku Generator</h3>
 					<p>Django application that generates random haikus and categorizes them by sentiment.</p>
 				</li>
-				<li><a href = "https://github.com/kubczakn/Calculator" style = "text-decoration:none", target="blank;">
+				<li><a href = "https://github.com/kubczakn/Wallpaper" style = "text-decoration:none", target="blank;">
 					<img class="logo" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__340.jpg"></a>
 					<h3>Wallpaper Scraper</h3>
 					<p>Python script that sets home wallpaper from web scraping.</p>
