--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
 					<h3>Wallpaper Scraper</h3>
 					<p>Python script that sets home wallpaper from web scraping.</p>
 				</li>
+				<li><a href = "https://github.com/kubczakn/Etch-A-Sketch" style = "text-decoration:none", target="blank;">
+					<img class="logo" src="https://cdn.pocket-lint.com/r/s/660x/assets/images/104730-gadgets-feature-best-etch-a-sketch-masterpieces-image24-pethpkqrgg-jpg.webp?v1"></a>
+					<h3>Etch-A-Sketch</h3>
+					<p>Etch-A-Sketch written in Java.</p>
+				</li>
 			</ul>
 		</div>
 		
